# llm-as-a-verifier

./: .gitignore  README.md  pyproject.toml
data/: pi_speak_extension_smoke_trajectories.json  pi_speak_node_verifier.toml  sample_labeled_dataset.json  sample_trajectories.json
prompts/: smoke-testing.md
scripts/: evaluate-verifier.py  trajectory_verifier.py  verifier-collect.py  verify-trajectories.py
skills/llm-as-verifier/: SKILL.md
skills/llm-as-verifier/agents/: openai.yaml
tests/: test_trajectory_verifier.py
